Fix slider visibility: Set background on main element instead of transparent

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -309,7 +309,10 @@ button:disabled { opacity: 0.55; cursor: not-allowed; }
 input[type="range"] {
     -webkit-appearance: none;
     appearance: none;
-    background: transparent;
+    height: 6px;
+    background: #2a2f36;
+    border-radius: 3px;
+    outline: none;
     cursor: pointer;
 }
 
@@ -318,6 +321,7 @@ input[type="range"]::-webkit-slider-track {
     background: #2a2f36;
     height: 6px;
     border-radius: 3px;
+    border: none;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -327,7 +331,6 @@ input[type="range"]::-webkit-slider-thumb {
     height: 16px;
     width: 16px;
     border-radius: 50%;
-    margin-top: -5px; /* Center the thumb on the track */
     cursor: pointer;
 }
 
@@ -340,6 +343,7 @@ input[type="range"]::-moz-range-track {
     background: #2a2f36;
     height: 6px;
     border-radius: 3px;
+    border: none;
 }
 
 input[type="range"]::-moz-range-thumb {
